@@ -35,8 +35,6 @@
             <version>4.22.0</version>
         </dependency>
 
-
-
         <!-- https://mvnrepository.com/artifact/org.testng/testng -->
         <dependency>
             <groupId>org.testng</groupId>
@@ -64,7 +62,7 @@
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>4.0.9</version>
+            <version>5.1.2</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
@@ -74,8 +72,24 @@
             <version>1.0.2</version>
         </dependency>
 
-
-
     </dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.3.1</version>
+            <configuration>
+                <!--Uygulamanın dilini İngilizce olarak ayarlar. Bu, dilin İngilizce olmasını sağlayarak, uygulamanın veya raporların İngilizce dilinde görüntülenmesini sağlar.  -->
+                <argLine>-Duser.language=en</argLine>
+                <argLine>-Xmx1024m</argLine>
+                <argLine>-XX:MaxPermSize=256m</argLine>
+                <!--Dosya kodlamasını UTF-8 olarak ayarlar. Bu, uygulamanın dosyaları UTF-8 kodlamasıyla okumasını ve yazmasını sağlar, böylece uluslararası karakterler doğru bir şekilde işlenir. -->
+                <argLine>-Dfile.encoding=UTF-8</argLine>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
